--- a/booking-service/pom.xml
+++ b/booking-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.stackroute</groupId>
 	<artifactId>booking-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>payment-service</name>
+	<name>booking-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
